# SkyStyle

./: .env  .env.exapmle  .gitignore  README.md  docker-compose.yml
python-service/: .dockerignore  Dockerfile  app.py  requirements.txt
python-service/static/styles/: generate.css  home.css  index.css  login.css  outfits.css  profile.css  registr.css
python-service/templates/: app.py  generate.html  home.html  index.html  login.html  outfits.html  profile.html  registr.html
python-service/templates/styles/: login.css
rust-service/: .dockerignore  Cargo.toml  Dockerfile
rust-service/src/: auth.rs  config.rs  main.rs  outfit.rs  outfits.rs  wardrobe.rs  weather.rs
